fixed spacing issues in sponsor agreement form

--- a/mdot/static/mdot/css/inline.less
+++ b/mdot/static/mdot/css/inline.less
@@ -23,13 +23,14 @@ body { overflow-x: hidden; font-family: 'Open Sans', sans-serif !important;  fon
     p.form-description {margin-top: 0; margin-bottom: 15px;}
     .request-form {max-width: 750px;}
     .request-form label{margin-top: 20px; color: #5c5c5c;}
-    .request-form input[type="radio"], .request-form input[type="checkbox"] {margin: 4px 10px 0}
+    .request-form input[type="radio"], .request-form input[type="checkbox"] {margin-right: 10px; margin-left: 5px;}
     .request-form input {padding-top: 12px; padding-bottom: 12px; padding-left: 12px;}
     ul.errorlist li{color: red;}
     .mdot-sponsor {
         .details-container {border: 1px solid @gold; padding: 25px; margin-top: 50px;}
         .details-container ul {columns: 2; -webkit-columns: 2; -moz-columns: 2;}
         .details-container ul li {padding: 5px;}
+        .details-container ul li strong {margin-right: 5px;}
         form {padding-top: 5rem;}
         hr {border-color: #cccccc}
         .sponsor-requirements {
